k8s/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-nginx
    annotations:
        nginx.ingress.kubernetes.io/enable-cors: "true"
        nginx.ingress.kubernetes.io/cors-allow-origin: "*"
        nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
        # nginx.ingress.kubernetes.io/ssl-redirect: "true"
        # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: spindle.neurofin.ai
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: vision-dash
                            port:
                                number: 80
        - host: apiv2.neurofin.ai
          http:
              paths:
                  - path: /auth
                    pathType: Prefix
                    backend:
                        service:
                            name: auth
                            port:
                                number: 80
        - host: apiv2.neurofin.ai
          http:
              paths:
                  - path: /app
                    pathType: Prefix
                    backend:
                        service:
                            name: application-manager
                            port:
                                number: 80
    tls:
        - hosts:
              - apiv2.neurofin.ai
              - spindle.neurofin.ai
          secretName: acme-crt-secret
