k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-nginx
    annotations:
        nginx.ingress.kubernetes.io/enable-cors: "true"
        nginx.ingress.kubernetes.io/cors-allow-origin: "*"
        nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
        # nginx.ingress.kubernetes.io/ssl-redirect: "true"
        # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: file.isree.dev
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: file-manager
                            port:
                                number: 80
        - host: auth.isree.dev
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: auth
                            port:
                                number: 80
        - host: application.isree.dev
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: application-manager
                            port:
                                number: 80
    tls:
        - hosts:
              - isree.dev
          secretName: acme-crt-secret
